Fixed skill icon spacing between text

--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@
 .skills .skill-block .title{
   position: absolute;
   text-align: center;
-  bottom: 0;
+  bottom: 5px;
   left: 50%;
   transform: translateX(-50%);
   font-size: 14px;
